--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "swalayan-bagus-monorepo",
     "version": "1.0.0",
     "private": true,
+    "engines": {
+      "node": ">=20.0.0"
+    },
     "scripts": {
       "start": "NODE_ENV=production node --loader ts-node/esm backend/src/server.ts",
       "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
